Improved variable comparison

--- a/spicyBenchmark/src/conf/log4j.properties
+++ b/spicyBenchmark/src/conf/log4j.properties
@@ -21,7 +21,7 @@ log4j.appender.file.layout.ConversionPattern=%-5p %.30c: %m%n
 #log4j.logger.it.unibas.spicybenchmark.operators.comparators = DEBUG
 log4j.logger.it.unibas.spicybenchmark.operators.EvaluateFeatureWithMultipleHashIndexing = INFO
 #log4j.logger.it.unibas.spicybenchmark.operators.EvaluateFeatureWithMultipleHashIndexingRemove = DEBUG
-log4j.logger.it.unibas.spicybenchmark.operators.EvaluateFeatureWithMultipleHashIndexingBlocking = INFO
+#log4j.logger.it.unibas.spicybenchmark.operators.EvaluateFeatureWithMultipleHashIndexingBlocking = INFO
 #log4j.logger.it.unibas.spicybenchmark.operators.EvaluateFeature = TRACE
 #log4j.logger.it.unibas.spicybenchmark.operators.generators = DEBUG
 #log4j.logger.it.unibas.spicybenchmark.operators.generators.TuplesInJoinGenerator = DEBUG
