--- a/spicyBenchmark/build.properties
+++ b/spicyBenchmark/build.properties
@@ -1,5 +1,5 @@
 #Build Number for ANT. Do not edit!
-#Mon Nov 18 16:53:34 EST 2013
-build.number=86
+#Tue Oct 27 19:13:27 CET 2015
+build.number=87
 major.version=0
 minor.version=1
